argocd/templates/IngressRouteTCP.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - argocd
  routes:
    - match: HostSNI(`*`)
      services:
        - name: argocd-server
          port: 443
